# wasm_bindgen

./: Cargo.toml  README.md  index.js  package-lock.json
wgpu-minimal/: Cargo.toml
wgpu-minimal/src/: framework.rs  main.rs
