[package]
name = "wgpu-minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = "1.5.4"
bytemuck = { version = "1.14.0", features = ["bytemuck_derive", "derive"] }
env_logger = "0.10.0"
glam = { version = "0.24.2", features = ["bytemuck"] }
log = "0.4.20"
pollster = "0.3.0"
wasm-bindgen-test = "0.3.37"
wgpu = { version = "0.17.1", features = ["serde", "trace"] }
winit = "0.28.7"
