[package]
name = "wgpu-minimal"
version = "0.1.0"
edition = "2021"
default-run="wgpu-minimal"

[dependencies]
async-executor = "1.5.4"
bytemuck = { version = "1.14.0", features = ["bytemuck_derive", "derive"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
env_logger = "0.10.0"
getrandom = { version = "0.2.10", features = ["js"] }
glam = { version = "0.24.2", features = ["bytemuck"] }
js-sys = "0.3.64"
log = "0.4.20"
pollster = "0.3.0"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen-test = "0.3.37"
web-sys = { version = "0.3.64", features = ["Location"] }
wgpu = { version = "0.17.1", features = ["serde", "trace"] }
winit = "0.28.7"
